--- a/documentation.html
+++ b/documentation.html
@@ -180,6 +180,11 @@ $(document).ready(function () {
 </ol>
 <p>The tool automatically will create the model and it will show the different coefficients for the polynomial equation and the R square value to give you an idea about how precise is your model.</p>
 </div>
+<div id="github-repository" class="section level2">
+<h2>Github repository</h2>
+<p>All the code from this project is available in the following url:</p>
+<p><a href="https://github.com/rdiaz82/data_products_week_4" class="uri">https://github.com/rdiaz82/data_products_week_4</a></p>
+</div>
 
 
 
